# gesture_pointer

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  requirements.txt
gesture_pointer/: setup.py
gesture_pointer/src/gesture_pointer/: gesture_pointer
gesture_pointer/src/gesture_pointer/submodules/: camera_subscriber.py
gesture_pointer/src/gesture_pointer/utils/: __init__.py  aruco_depth_mask.py  pose_utils.py  visualization_utils.py
json_files/: targets.json
ros1env/src/gesture_pointer/: CMakeLists.txt  package.xml
ros1env/src/gesture_pointer/data/: corners_mean_example.csv
ros1env/src/gesture_pointer/launch/: aruco_corner_collection.launch  single_marker.launch
ros1env/src/gesture_pointer/msg/: OpenDRPose2DKeypoint.msg
ros1env/src/gesture_pointer/src/gesture_pointer/: aruco_data_collection  constants.py  gesture_pointer  plane_visualizer
ros1env/src/gesture_pointer/src/gesture_pointer/submodules/: __init__.py  workspace.py
ros1env/src/gesture_pointer/src/gesture_pointer/utils/: __init__.py  define_plane.py  file_utils.py
ros1env/src/snap_to_target/: CMakeLists.txt  package.xml
ros1env/src/snap_to_target/src/snap_main/: snap_node
ros1env/src/snap_to_target/src/snap_main/snap_strategy_lib/: detection_filter.py  detector_sub.py  json_utils.py  location_strategies.py  object_strategies.py  pointer_sub.py  snap_action_node.py
snap_to_target/: setup.py
snap_to_target/action/: Snap.action
snap_to_target/src/snap_main/snap_strategy_lib/: location_strategies.py  snap_action_node.py
