<?xml version="1.0"?>
<package format="2">
  <name>gesture_pointer</name>
  <version>1.0.0</version>
  <description>The gesture_pointer package</description>

  <author email="noora.sassali@tuni.fi">Noora Sassali</author>
  <maintainer email="noora.sassali@tuni.fi">Noora Sassali</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/NMKsas/gesture_pointer_docs</url>

  <!-- Use build_depend for packages you need at compile time: -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!--Needed if Aruco markers are used-->
  <build_depend>aruco_ros</build_depend>
  <build_export_depend>aruco_ros</build_export_depend> 
  <exec_depend>aruco_ros</exec_depend>  
</package>
