<?xml version="1.0"?>
<package format="2">
  <name>snap_to_target</name>
  <version>1.0.0</version>
  <description>The snap_to_target package</description>

  <author email="noora.sassali@tuni.fi">Noora Sassali</author>
  <maintainer email="noora.sassali@tuni.fi">Noora Sassali</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
